--- a/DCompWordPress/docker-compose.yml
+++ b/DCompWordPress/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     image: mysql:5.7
     volumes:
       - db_data:/var/lib/mysql
-    # restart: always
+    restart: always
     environment:
       MYSQL_ROOT_PASSWORD:  wordpress1234
       MYSQL_DATABASE: wordpress
@@ -24,7 +24,7 @@ services:
     image: wordpress:latest
     ports:
      - 8000:80
-    # restart: always
+    restart: always
     environment:
       WORDPRESS_DB_HOST: db:3306
       WORDPRESS_DB_USER:  wordpress
